# ai-and-robotics-cpp

./: .gitignore  README.md
libtorch/: .gitignore  README.md
libtorch/00_SETUP/: CMakeSettings.json  README.md
libtorch/00_SETUP/CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h
libtorch/01_BASIC_NEURAL_NETWORK/: 01_BASIC_NEURAL_NETWORK.cpp  01_BASIC_NEURAL_NETWORK.h  CMakeLists.txt  README.md
